valueOf method now handles floating values in case of integer types as well, simply parses them as Double and then retrieves the appropriate value from the Double object